--- a/research_es.html
+++ b/research_es.html
@@ -184,35 +184,34 @@
    <div class="pretalktitle"></div>
   </div>
 
-  <br/><div class="cv">
-   <div class="year"></div><div class="paper"><h4>&emsp;Probabilistic bounds on best rank-one approximation ratio<a class="btn btn-arxiv" href="https://arxiv.org/abs/2201.02191" role="button">arXiv:2201.02191</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://www.mathematik.uni-osnabrueck.de/forschung/ag_angewandte_algebra_und_datenanalyse/kozhasov_khazhgali.html">Khazhgali Kozhasov</a>)</div>
-  </div>
+	<br/><div class="cv">
+	 <div class="year"></div><div class="paper"><h4>&emsp;Probabilistic bounds on best rank-one approximation ratio<a class="btn btn-arxiv" href="https://arxiv.org/abs/2201.02191" role="button">arXiv:2201.02191</a></h4></div>
+	 <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://www.mathematik.uni-osnabrueck.de/forschung/ag_angewandte_algebra_und_Fechananalyse/kozhasov_khazhgali.html">Khazhgali Kozhasov</a>)</div>
+	</div>
 
-  <br/><div class="cv">
-   <div class="year"><h4>2021</h4></div><div class="paper"><h4>&emsp;Functional norms, condition numbers<br/>&emsp;and numerical algorithms in algebraic geometry<a class="btn btn-arxiv" href="https://arxiv.org/abs/2102.11727" role="button">arXiv:2102.11727</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> y <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
-  </div>
+	<br/><div class="row"><div class="col-md-12">
+	<h3>Art&iacute;culos cient&iacute;ficos de revista</h3>
+	</div></div>
 
-</div>
-<hr>
-<div id="journalpapers">
-  <h2 class="display-4">Art&iacute;culos cient&iacute;ficos de revista</h2>
+	<br/><div class="cv">
+	<div class="year"><h4>2023</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<br/>&emsp;I: Univariate Polynomials and Hypersurfaces<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
+	 <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto and E. Tsigaridas. Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces (Ingl&eacute;s) [N&uacute;meros de Condici&oacute;n para el Cubo. I: Polinomios Univariados e Hipersuperficies], <i>Journal of Symbolic Computation</i>, 115:142-173, 2023. First on-line: August 2022. <span><a href="https://doi.org/10.1016/j.jsc.2022.08.013">DOI 10.1016/j.jsc.2022.08.013</a></span></div>
+	 <div class="pretalktitle"></div><div class="collaborator">Journal version of <em>Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</em> in the Special Issue of ISSAC'20.</div>
+	</div>
 
-  <br/><div class="cv">
-  <div class="year"><h4>2023</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<br/>&emsp;I: Univariate Polynomials and Hypersurfaces<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto and E. Tsigaridas. Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces (Ingl&eacute;s) [N&uacute;meros de Condici&oacute;n para el Cubo. I: Polinomios Univariados e Hipersuperficies], <i>Journal of Symbolic Computation</i>, 115:142-173, 2023. First on-line: August 2022. <span><a href="https://doi.org/10.1016/j.jsc.2022.08.013">DOI 10.1016/j.jsc.2022.08.013</a></span></div>
-   <div class="pretalktitle"></div><div class="collaborator">Journal version of <em>Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</em> in the Special Issue of ISSAC'20.</div>
-  </div>
+	<br/><div class="cv">
+	 <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;Functional norms, condition numbers<br/>&emsp;and numerical algorithms in algebraic geometry<a class="btn btn-open-access" href="https://doi.org/10.1017/fms.2022.89" role="button"><i class="ai ai-open-access"></i> OA paper</a></h4></div>
+	 <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. Functional norms, condition numbers and numerical algorithms in algebraic geometry (Ingl&eacute;s) [Normas funcionales, n&uacute;meros de condici&oacute;n y algoritmos num&eacute;ricos], <i>Forum of Mathematics, Sigma</i>, 10:e103, 2022. <span><a href="https://doi.org/10.1017/fms.2022.89">DOI 10.1017/fms.2022.89</a></span> <span><a href="https://arxiv.org/abs/2102.11727">arXiv:2102.11727</a></span></div>
+	</div>
 
-  <br/><div class="cv">
-  <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;A Geometric Summation of the Geometric Series<a class="btn btn-hal" href="https://hal.inria.fr/hal-03779492" role="button">hal-03779492</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto. A Geometric Summation of the Geometric Series (Ingl&eacute;s) [Una Suma Geom&eacute;trica de la Serie Geom&eacute;trica], <i>The American Mathematical Monthly</i>, 2022. <span><a href="https://doi.org/10.1080/00029890.2022.2115825">DOI 10.1080/00029890.2022.2115825</a></span> <span><a style="color:#FF69B4;" href="../papers/A_Geometric_Summation_of_the_Geometric_Series_AM.pdf">[AM for downloading]</a></span></div>
-  </div>
+	<br/><div class="cv">
+	<div class="year"></div><div class="paper"><h4>&emsp;A Geometric Summation of the Geometric Series<a class="btn btn-hal" href="https://hal.inria.fr/hal-03779492" role="button">hal-03779492</a></h4></div>
+	 <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto. A Geometric Summation of the Geometric Series (Ingl&eacute;s) [Una Suma Geom&eacute;trica de la Serie Geom&eacute;trica], <i>The American Mathematical Monthly</i>, 129(10):974, 2022. <span><a href="https://doi.org/10.1080/00029890.2022.2115825">DOI 10.1080/00029890.2022.2115825</a></span> <span><a style="color:#FF69B4;" href="../papers/A_Geometric_Summation_of_the_Geometric_Series_AM.pdf">[AM for downloading]</a></span></div>
+	</div>
 
   <br/><div class="cv">
   <div class="year"></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">A.A. Erg&uuml;r, F. Cucker and J. Tonelli-Cueto. On the Complexity of the Plantinga-Vegter Algorithm (Ingl&eacute;s) [Sobre la Complejidad del Algoritmo Plantinga-Vegter], <i>Discrete & Computational Geometry</i>, 68(3):664–708, 2022. <!--First on-line: January 2021.--> <span><a href="https://doi.org/10.1007/s00454-022-00403-x">DOI 10.1007/s00454-022-00403-x</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cUAbS">[SharedIt LINK]</a></span></div>
+   <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. On the Complexity of the Plantinga-Vegter Algorithm (Ingl&eacute;s) [Sobre la Complejidad del Algoritmo Plantinga-Vegter], <i>Discrete & Computational Geometry</i>, 68(3):664–708, 2022. <!--First on-line: January 2021.--> <span><a href="https://doi.org/10.1007/s00454-022-00403-x">DOI 10.1007/s00454-022-00403-x</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cUAbS">[SharedIt LINK]</a></span></div>
    <div class="pretalktitle"></div><div class="collaborator">Versi&oacute;n de revista de <em>Plantinga-Vegter algorithm takes average polynomial time</em>. </div>
   </div>
 
