--- a/cv.html
+++ b/cv.html
@@ -280,7 +280,7 @@
       </div>
 
 			<br/><div class="cv">
-       <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;Functional norms, condition numbers<a class="btn btn-arxiv" href="https://arxiv.org/abs/2102.11727" role="button">arXiv:2102.11727</a><br/>&emsp;and numerical algorithms in algebraic geometry<a class="btn btn-open-access" href="https://doi.org/10.1017/fms.2022.89" role="button"><i class="ai ai-open-access"></i> OA paper</a></h4></div>
+       <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;Functional norms, condition numbers<br/>&emsp;and numerical algorithms in algebraic geometry <a class="btn btn-arxiv" href="https://arxiv.org/abs/2102.11727" role="button">arXiv:2102.11727</a><a class="btn btn-open-access" href="https://doi.org/10.1017/fms.2022.89" role="button"><i class="ai ai-open-access"></i> OA paper</a></h4></div>
        <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. Functional norms, condition numbers and numerical algorithms in algebraic geometry, <i>Forum of Mathematics, Sigma</i>, 10:e103, 2022. <span><a href="https://doi.org/10.1017/fms.2022.89">DOI 10.1017/fms.2022.89</a></span></div>
       </div>
 
