--- a/cv_es.html
+++ b/cv_es.html
@@ -260,12 +260,7 @@
      </div>-->
 
      <br/><div class="cv">
-      <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;Ultrametric Smale's $\alpha$-theory<a class="btn btn-arxiv" href="https://arxiv.org/abs/2206.08392" role="button">arXiv:2206.08392</a></h4></div>
-      <div class="pretalktitle"></div><div class="collaborator">(Junto a Jazz G. Suchen)</div>
-     </div>
-
-     <br/><div class="cv">
-      <div class="year"></div><div class="paper"><h4>&emsp;Generalized Perron Roots and Solvability of the Absolute Value Equation<a class="btn btn-arxiv" href="https://arxiv.org/abs/1912.08157" role="button">arXiv:1912.08157</a></h4></div>
+      <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;Generalized Perron Roots and Solvability of the Absolute Value Equation<a class="btn btn-arxiv" href="https://arxiv.org/abs/1912.08157" role="button">arXiv:1912.08157</a></h4></div>
       <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://page.math.tu-berlin.de/~radons/">Manuel Radons</a>)</div>
      </div>
 
@@ -333,6 +328,11 @@
       <br/><div class="cv">
        <div class="year"></div><div class="paper"><h4>&emsp;On the Error of Random Sampling:<br/>Uniformly Distributed Random Points on Parametric Curves<a class="btn btn-arxiv" href="https://arxiv.org/abs/2203.02832v2" role="button">arXiv:2203.02832v2</a></h4></div>
        <div class="pretalktitle"></div><div class="collaborator">A. Chalkis, Ch. Katsamaki y J. Tonelli-Cueto. On the Error of Random Sampling: Uniformly Distributed Random Points on Parametric Curves (Ingl&eacute;s) [Sobre el Error del Sampleo Aleatorio: Puntos Uniformemente Distribuidos en Curvas Param&eacute;tricas]. En <i>Proceedings of the 2022 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'22, p&aacute;ginas 273–282. ACM, 2022. <span><a href="https://doi.org/10.1145/3476446.3536190">DOI 10.1145/3476446.3536190</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3476446.3536190?cid=99659444592">[Author-Ized LINK]</a></span></div>
+      </div>
+
+			<br/><div class="cv">
+       <div class="year"></div><div class="paper"><h4>&emsp;Ultrametric Smale's $\alpha$-theory<a class="btn btn-arxiv" href="https://arxiv.org/abs/2206.08392" role="button">arXiv:2206.08392</a></h4></div>
+       <div class="pretalktitle"></div><div class="collaborator">J.G. Suchen and J. Tonelli-Cueto. Ultrametric Smale's $\alpha$-theory (Ingl&eacute;s) [Teor&iacute;a $\alpha$ de Smale Ultram&eacute;trica], <i>ACM Communications in Computer Algebra</i>, 56(2):56-59, June 2022. <span><a href="https://doi.org/10.1145/3572867.3572875">DOI 10.1145/3572867.3572875</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3572867.3572875?cid=99659444592">[Author-Ized LINK]</a></span></div>
       </div>
 
       <br/><div class="cv">
@@ -936,8 +936,13 @@
       <h3>P&oacute;steres</h3>
       </div></div>
 
+			<br/><div class="cv">
+      <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="#RSMEUMA2022">II Encuentro RSME-UMA</a></h4></div>
+        <div class="pretalktitle"></div><div class="talktitle">Kushnirenko's Fewnomials, the Number of Real Zeros and Condition Numbers<span style="float:right;"><a href="pdf/RSMEUMA2_poster.pdf">Poster</a></span></div>
+      </div>
+
       <br/><div class="cv">
-      <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="#5SIAMTXLA">5th Annual Meeting of the SIAM Texas-Louisiana Section</a></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#5SIAMTXLA">5th Annual Meeting of the SIAM Texas-Louisiana Section</a></h4></div>
         <div class="pretalktitle"></div><div class="talktitle">Probabilistic Bounds on Best Rank-One Approximation Ratio<span style="float:right;"><a href="pdf/5SIAMTXLA_poster.pdf">P&oacute;ster</a></span></div>
       </div>
 
