--- a/research_es.html
+++ b/research_es.html
@@ -170,12 +170,7 @@
  </div>-->
 
  <br/><div class="cv">
-  <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;Ultrametric Smale's $\alpha$-theory<a class="btn btn-arxiv" href="https://arxiv.org/abs/2206.08392" role="button">arXiv:2206.08392</a></h4></div>
-  <div class="pretalktitle"></div><div class="collaborator">(Junto a Jazz G. Suchen)</div>
- </div>
-
- <br/><div class="cv">
-  <div class="year"></div><div class="paper"><h4>&emsp;Generalized Perron Roots and Solvability of the Absolute Value Equation<a class="btn btn-arxiv" href="https://arxiv.org/abs/1912.08157" role="button">arXiv:1912.08157</a></h4></div>
+  <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;Generalized Perron Roots and Solvability of the Absolute Value Equation<a class="btn btn-arxiv" href="https://arxiv.org/abs/1912.08157" role="button">arXiv:1912.08157</a></h4></div>
   <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://page.math.tu-berlin.de/~radons/">Manuel Radons</a>)</div>
  </div>
 
@@ -245,6 +240,11 @@
    <div class="year"></div><div class="paper"><h4>&emsp;On the Error of Random Sampling:<br/>Uniformly Distributed Random Points on Parametric Curves<a class="btn btn-arxiv" href="https://arxiv.org/abs/2203.02832v2" role="button">arXiv:2203.02832v2</a></h4></div>
    <div class="pretalktitle"></div><div class="collaborator">A. Chalkis, Ch. Katsamaki y J. Tonelli-Cueto. On the Error of Random Sampling: Uniformly Distributed Random Points on Parametric Curves (Ingl&eacute;s) [Sobre el Error del Sampleo Aleatorio: Puntos Uniformemente Distribuidos en Curvas Param&eacute;tricas]. En <i>Proceedings of the 2022 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'22, p&aacute;ginas 273–282. ACM, 2022. <span><a href="https://doi.org/10.1145/3476446.3536190">DOI 10.1145/3476446.3536190</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3476446.3536190?cid=99659444592">[Author-Ized LINK]</a></span></div>
   </div>
+
+	<br/><div class="cv">
+	 <div class="year"></div><div class="paper"><h4>&emsp;Ultrametric Smale's $\alpha$-theory<a class="btn btn-arxiv" href="https://arxiv.org/abs/2206.08392" role="button">arXiv:2206.08392</a></h4></div>
+	 <div class="pretalktitle"></div><div class="collaborator">J.G. Suchen and J. Tonelli-Cueto. Ultrametric Smale's $\alpha$-theory (Ingl&eacute;s) [Teor&iacute;a $\alpha$ de Smale Ultram&eacute;trica], <i>ACM Communications in Computer Algebra</i>, 56(2):56-59, June 2022. <span><a href="https://doi.org/10.1145/3572867.3572875">DOI 10.1145/3572867.3572875</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3572867.3572875?cid=99659444592">[Author-Ized LINK]</a></span></div>
+	</div>
 
   <br/><div class="cv">
    <div class="year"></div><div class="paper"><h4>&emsp;Generalized Perron roots and solvability of the absolute value equation<a class="btn btn-hal" href="https://hal.inria.fr/hal-03739462" role="button">hal-03739462</a></h4></div>
