--- a/cv_es.html
+++ b/cv_es.html
@@ -581,7 +581,7 @@
 
           <br/><div class="cv">
           <div class="year"><h4>2023</h4></div><div class="title"><h4>&emsp;<a href="#JMM2023">Joint Mathematics Meetings 2023</a></h4></div>
-            <div class="pretalktitle"></div><div class="talktitle">Condition-based Low-Degree Approximation of Real Polynomial Systems<!--<span style="float:right;"><a href="pdf/JMM2023_slides.pdf">Slides</a></span>--></div>
+            <div class="pretalktitle"></div><div class="talktitle">Condition-based Low-Degree Approximation of Real Polynomial Systems<span style="float:right;"><a href="pdf/JMM2023_slides.pdf">Diapositivas</a></span></div>
           </div>
 
       <!-- 2022
@@ -589,7 +589,7 @@
 
          <br/><div class="cv">
          <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="#4thBYMAT">4th BYMAT Conference</a></h4></div>
-           <div class="pretalktitle"></div><div class="talktitle">Average Almost-Optimality of Descartes Solver<span style="float:right;"><a href="pdf/4BYMAT_slides.pdf">Slides</a></span></div>
+           <div class="pretalktitle"></div><div class="talktitle">Average Almost-Optimality of Descartes Solver<span style="float:right;"><a href="pdf/4BYMAT_slides.pdf">Diapositivas</a></span></div>
          </div>
 
          <br/><div class="cv">
