--- a/non-research.html
+++ b/non-research.html
@@ -111,12 +111,16 @@
   <div id="teaching">
     <h2 class="display-4">Teaching</h2>
     <p>
-       My teaching experience consist of approximately 200 hours distributed among six university-level courses. Below, a simplified account of my teaching experience can be found. Since this is a very limited experience, I am planning to extend this experience in the next years if possible.
+       My teaching experience consist of approximately 260 hours distributed among seven university-level courses. Below, a simplified account of my teaching experience can be found. Since this is a very limited experience, I am planning to extend this experience in the next years if possible.
      </p>
      <ul style="list-style-type:none;font-weight: bold;  padding: 0em;margin-left:0.5em;">
+       <li>University of Texas at San Antonio</li>
+       <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
+         <li><em>Calculus II<em>, instructor, SpSe2023 <a class="btn btn-blog" href="UTSA_Course__Calculus_II__MATH_1224_009"  role="button">Course Webpage</a></li>
+       </ul>
        <li>&Eacute;cole polytechnique</li>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
-         <li><em>3rd year Bachelor Research Project<br/>&ldquo;Topological Data Analysis in Computational Real Algebraic Geometry&rdquo;, supervisor (together with Elias Tsigaridas) of Aur&egrave;le Bohbot, WiSe2021-22.</li>
+         <li><em>3rd year Bachelor Research Project<br/>&ldquo;Topological Data Analysis in Computational Real Algebraic Geometry&rdquo;</em>, supervisor (together with Elias Tsigaridas) of Aur&egrave;le Bohbot, WiSe2021-22.</li>
        </ul>
        <li>Technische Universit&auml;t Berlin</li>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
