--- a/cv.html
+++ b/cv.html
@@ -563,7 +563,12 @@
           YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
           <br/><div class="cv">
-          <div class="year"><h4>2023</h4></div><div class="title"><h4>&emsp;<a href="#JMM2023">Joint Mathematics Meetings 2023</a></h4></div>
+          <div class="year"><h4>2023</h4></div><div class="title"><h4>&emsp;<a href="#rsmejovenes23">VI Congreso de Jóvenes Investigadores de la RSME</a></h4></div>
+            <div class="pretalktitle"></div><div class="talktitle">Condition-based Low-Degree Approximation of Real Polynomial Systems<!--<span style="float:right;"><a href="pdf/RSME2023_slides.pdf">Slides</a></span>--></div>
+          </div>
+
+          <br/><div class="cv">
+          <div class="year"></div><div class="title"><h4>&emsp;<a href="#JMM2023">Joint Mathematics Meetings 2023</a></h4></div>
             <div class="pretalktitle"></div><div class="talktitle">Condition-based Low-Degree Approximation of Real Polynomial Systems<span style="float:right;"><a href="pdf/JMM2023_slides.pdf">Slides</a></span></div>
           </div>
 
