--- a/non-research_es.html
+++ b/non-research_es.html
@@ -112,12 +112,16 @@
   <div id="teaching">
     <h2 class="display-4">Docencia</h2>
     <p>
-       Mi experiencia docente consta de aproximadamente 200 horas distribuidas entre seis cursos de nivel universitario. Debajo, una lista simplificada de mi experiencia docente. Debido a que esto es una experiencia docente muy limitada, espero ampliarla en los a&ntilde;os venideros.
+       Mi experiencia docente consta de aproximadamente 260 horas distribuidas entre siete cursos de nivel universitario. Debajo, una lista simplificada de mi experiencia docente. Debido a que esto es una experiencia docente muy limitada, espero ampliarla en los a&ntilde;os venideros.
      </p>
      <ul style="list-style-type:none;font-weight: bold;  padding: 0em;margin-left:0.5em;">
+       <li>University of Texas at San Antonio</li>
+       <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
+         <li><em>Calculus II<em>, instructor, SpSe2023 <a class="btn btn-blog" href="UTSA_Course__Calculus_II__MATH_1224_009"  role="button">Course Webpage</a></li>
+       </ul>
        <li>&Eacute;cole polytechnique</li>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
-         <li><em>3rd year Bachelor Research Project<br/>&ldquo;Topological Data Analysis in Computational Real Algebraic Geometry&rdquo;, supervisor (junto a Elias Tsigaridas) de Aur&egrave;le Bohbot, WiSe2021-22.</li>
+         <li><em>3rd year Bachelor Research Project<br/>&ldquo;Topological Data Analysis in Computational Real Algebraic Geometry&rdquo;</em>, supervisor (junto a Elias Tsigaridas) de Aur&egrave;le Bohbot, WiSe2021-22.</li>
        <li>Technische Universit&auml;t Berlin</li>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
          <li><em>Effective Algebraic Geometry</em> Seminar, organizador (junto a Peter B&uuml;rgisser y Alperen A. Erg&uuml;r), SeVe 2018. (<span><a href="pdf/Effective_Algebraic_Geometry_Seminar.pdf">temario</a></span>)</li>
