--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -114,6 +114,9 @@
   </div><div class="col-md-6">
     <a class="btn btn-secondary" href="https://openstax.org/details/books/calculus-volume-2" role="button" style="width:80%;">Course Textbook</a>
   </div></div>
+  <div class="col-md-3"></div><div class="row" style="text-align:center;"><div class="col-md-6">
+    <a class="btn btn-secondary" href="http://webwork.math.utsa.edu/webwork2/MAT_1224_009_Spring_2023/" role="button" style="width:80%;">WebWork (Homework)</a>
+  </div><div class="col-md-3"></div></div>
 <hr>
 <div id="basic">
   <h2 class="display-4">Basic Information</h2>
@@ -234,7 +237,7 @@
 					<td>Office Hours:</td>
 				</tr>
 				<tr>
-					<td>TBA<br/>
+					<td>Monday, 10:00 am - 12:05 am<br/>
 						Also by appointment and by Zoom</td>
 			</tr>
 			<tr style="line-height=1.3em;">
@@ -294,11 +297,11 @@
 <div id="lectures">
   <h2 class="display-4">Lectures</h2>
 
-<h3>Lecture 0</h3>
+<h3>Lecture 0 (Jan )</h3>
 <p>
 
 </p>
-<h3>Lecture 1</h3>
+<h3>Lecture 1 (Jan )</h3>
 <p>
 
 </p>
@@ -437,9 +440,6 @@
 	R. A. Silverman. <i>Essential calculus with applications</i>. Dover Publications, 1989.
 	</li>
 </ol>
-
-
-
 </div>
 <hr>
 <div id="gradesexams">
