--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -109,14 +109,13 @@
 
 <div class="container">
 <hr>
-  <div class="row" style="text-align:center;"><div class="col-md-6">
-    <a class="btn btn-secondary" href="pdf/UTSA_MAT1224_spring2022_syllabus.pdf" role="button" style="width:80%;">Syllabus</a>
-  </div><div class="col-md-6">
-    <a class="btn btn-secondary" href="https://openstax.org/details/books/calculus-volume-2" role="button" style="width:80%;">Course Textbook</a>
+  <div class="row" style="text-align:center;"><div class="col-md-4">
+    <a class="btn btn-secondary" href="pdf/UTSA_MAT1224_spring2022_syllabus.pdf" role="button" style="width:90%;">Syllabus</a>
+  </div><div class="col-md-4">
+    <a class="btn btn-secondary" href="http://webwork.math.utsa.edu/webwork2/MAT_1224_009_Spring_2023/" role="button" style="width:90%;">WebWork</a>
+  </div><div class="col-md-4">
+    <a class="btn btn-secondary" href="https://openstax.org/details/books/calculus-volume-2" role="button" style="width:90%;">Course Textbook</a>
   </div></div>
-  <div class="col-md-3"></div><div class="row" style="text-align:center;"><div class="col-md-6">
-    <a class="btn btn-secondary" href="http://webwork.math.utsa.edu/webwork2/MAT_1224_009_Spring_2023/" role="button" style="width:80%;">WebWork (Homework)</a>
-  </div><div class="col-md-3"></div></div>
 <hr>
 <div id="basic">
   <h2 class="display-4">Basic Information</h2>
