--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -296,67 +296,83 @@
 <div id="lectures">
   <h2 class="display-4">Lectures</h2>
 
-<h3>Lecture 0 (Jan )</h3>
+<h3>Lecture 0 (Jan 18)<br/>
+<em>The Fundamental Theorem of Calculus</em></h3>
 <p>
 
 </p>
-<h3>Lecture 1 (Jan )</h3>
+<h3>Lecture 1 (Jan 23)<br/>
+<em>Integration by Substitution</em></h3>
 <p>
 
 </p>
-<h3>Lecture 2</h3>
+<h3>Lecture 2 (Jan 25)<br/>
+<em>Area between Curves</em></h3>
 <p>
 
 </p>
-<h3>Lecture 3</h3>
+<h3>Lecture 3 (Jan 30)<br/>
+<em>Determining Volumes by Slicing</em></h3>
 <p>
 
 </p>
-<h3>Lecture 4</h3>
+<h3>Lecture 4 (Feb 1)<br/>
+<em>Volumes of Revolution, Cylindrival Shells</em></h3>
 <p>
 
 </p>
-<h3>Lecture 5</h3>
+<h3>Lecture 5 (Feb 6)<br/>
+<em>Arc Length of a Curve and Surface Area</em></h3>
 <p>
 
 </p>
-<h3>Lecture 6</h3>
+<h3>Lecture 6 (Feb 8)<br/>
+<em>Physical Applications</em></h3>
 <p>
 
 </p>
-<h3>Lecture 7</h3>
+<h3>Lecture 7 (Feb 13)<br/>
+<em>Moments and Center of Mass</em></h3>
 <p>
 
 </p>
-<h3>Lecture 8</h3>
+<h3>Lecture 8 (Feb 15)<br/>
+<em>Integration by Parts</em></h3>
 <p>
 
 </p>
-<h3>Lecture 9</h3>
+<h3>Lecture 9 (Feb 20)<br/>
+<em>Trigonometric Integrals</em></h3>
 <p>
 
 </p>
-<h3>Lecture 10</h3>
+<h3>Lecture 10 (Feb 22)<br/>
+<em>Trigonometric Substitution</em></h3>
 <p>
 
 </p>
-<h3>Lecture 11</h3>
+<h3>Lecture 11 (Feb 27)<br/>
+<em>Partial Fractions</em></h3>
 <p>
 
 </p>
-<h3>Lecture 12</h3>
+<h3>Lecture 12 (Mar 1)<br/>
+<em>Improper Integrals</em></h3>
 <p>
 
 </p>
-<h3>Lecture 13</h3>
+<h3>Lecture 13 (Mar 6)<br/>
+<em>Separation of Variables</em></h3>
 <p>
 
 </p>
-<h3>Lecture 14</h3>
+<h3>Lecture 14 (Mar 8)<br/>
+<em>First-Order Linear Differential Equations</em></h3>
 <p>
 
 </p>
-<h3>Lecture 15</h3>
+<h3>Lecture 15 (Mar 20)<br/>
+<em style="font-variant: small-caps;">Review of Integration and Differential Equations</em></h3>
 <p>
 
 </p>
