--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -371,60 +371,83 @@
 <p>
 
 </p>
+<hr>
+<h3 style="font-variant: small-caps;text-align:center;">Spring Break</h3>
+<hr>
 <h3>Lecture 15 (Mar 20)<br/>
 <em style="font-variant: small-caps;">Review of Integration and Differential Equations</em></h3>
 <p>
 
 </p>
-<h3>Lecture 16</h3>
+<h3>Lecture 16 (Mar 22)<br/>
+<em>Sequences</em></h3>
 <p>
 
 </p>
-<h3>Lecture 17</h3>
+<h3>Lecture 17 (Mar 27)<br/>
+<em>Infinite Series</em></h3>
 <p>
 
 </p>
-<h3>Lecture 18</h3>
+<h3>Lecture 18 (Mar 29)<br/>
+<em>The Divergence and Integral Tests</em></h3>
 <p>
 
 </p>
-<h3>Lecture 19</h3>
+<h3>Lecture 19 (Apr 3)<br/>
+<em>Comparison Test</em></h3>
 <p>
 
 </p>
-<h3>Lecture 20</h3>
+<h3>Lecture 20 (Apr 5)<br/>
+<em>Alternating Sequences</em></h3>
 <p>
 
 </p>
-<h3>Lecture 21</h3>
+<h3>Lecture 21 (Apr 10)<br/>
+<em>Ratio and Root Tests</em></h3>
 <p>
 
 </p>
-<h3>Lecture 22</h3>
+<h3>Lecture 22 (Apr 12)<br/>
+<em style="font-variant: small-caps;">Review of Series</em></h3>
 <p>
 
 </p>
-<h3>Lecture 23</h3>
+<h3>Lecture 23 (Apr 17)<br/>
+<em>Power Series and Functions</em></h3>
 <p>
 
 </p>
-<h3>Lecture 24</h3>
+<h3>Lecture 24 (Apr 19)<br/>
+<em>Properties of Power Series</em></h3>
 <p>
 
 </p>
-<h3>Lecture 25</h3>
+<h3>Lecture 25 (Apr 24)<br/>
+<em>Taylor and Maclaurin Series</em></h3>
 <p>
 
 </p>
-<h3>Lecture 26</h3>
+<h3>Lecture 26 (Apr 26)<br/>
+<em style="font-variant: small-caps;">Review of Power Series</em></h3>
 <p>
 
 </p>
-<h3>Lecture 27</h3>
+<h3>Lecture 27 (May 1)<br/>
+<em style="font-variant: small-caps;">Review for Final Exam</em></h3>
 <p>
 
 </p>
+<h3 style="font">Student Study Day (May 3)</h3>
+<p>
 
+</p>
+<hr>
+<h3 style="font">Final Exam (May 10)</h3>
+<p>
+The final exam will take place...
+</p>
 
 </div>
 <hr>
