--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -439,12 +439,12 @@
 <p>
 
 </p>
-<h3 style="font">Student Study Day (May 3)</h3>
+<h3 style="font-variant: small-caps;">Student Study Day (May 3)</h3>
 <p>
 
 </p>
 <hr>
-<h3 style="font">Final Exam (May 10)</h3>
+<h3 style="font-variant: small-caps;">Final Exam (May 10)</h3>
 <p>
 The final exam will take place...
 </p>
@@ -483,6 +483,14 @@ The final exam will take place...
 <div id="gradesexams">
 <h2 class="display-4">Grades and Exams</h2>
 <h3>Grading </h3>
+<p>
+
+</p>
+<h3>Midterm Exams</h3>
+<p>
+
+</p>
+<h3>Final Exam</h3>
 <p>
 
 </p>
