--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -297,7 +297,7 @@
   <h2 class="display-4">Lectures</h2>
 
 <h3>Lecture 0 (Jan 18)<br/>
-<em>The Fundamental Theorem of Calculus</em></h3>
+<em>The Fundamental Theorem of Calculus</em><a class="btn btn-secondary" href="https://openstax.org/books/calculus-volume-2/pages/1-3-the-fundamental-theorem-of-calculus" role="button">Section 1.3</a></h3>
 <p>
 
 </p>
