--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -302,72 +302,72 @@
 
 </p>
 <h3>Lecture 1 (Jan 23)<br/>
-<em>Integration by Substitution</em></h3>
+<em>Integration by Substitution</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/1-5-substitution" role="button">Section 1.5</a></h3>
 <p>
 
 </p>
 <h3>Lecture 2 (Jan 25)<br/>
-<em>Area between Curves</em></h3>
+<em>Area between Curves</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-1-areas-between-curves" role="button">Section 2.1</a></h3>
 <p>
 
 </p>
 <h3>Lecture 3 (Jan 30)<br/>
-<em>Determining Volumes by Slicing</em></h3>
+<em>Determining Volumes by Slicing</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-2-determining-volumes-by-slicing" role="button">Section 2.2</a></h3>
 <p>
 
 </p>
 <h3>Lecture 4 (Feb 1)<br/>
-<em>Volumes of Revolution, Cylindrival Shells</em></h3>
+<em>Volumes of Revolution: Cylindrival Shells</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-3-volumes-of-revolution-cylindrical-shells" role="button">Section 2.3</a></h3>
 <p>
 
 </p>
 <h3>Lecture 5 (Feb 6)<br/>
-<em>Arc Length of a Curve and Surface Area</em></h3>
+<em>Arc Length of a Curve and Surface Area</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-4-arc-length-of-a-curve-and-surface-area" role="button">Section 2.4</a></h3>
 <p>
 
 </p>
 <h3>Lecture 6 (Feb 8)<br/>
-<em>Physical Applications</em></h3>
+<em>Physical Applications</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-5-physical-applications" role="button">Section 2.5</a></h3>
 <p>
 
 </p>
 <h3>Lecture 7 (Feb 13)<br/>
-<em>Moments and Center of Mass</em></h3>
+<em>Moments and Center of Mass</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-6-moments-and-centers-of-mass" role="button">Section 2.6</a></h3>
 <p>
 
 </p>
 <h3>Lecture 8 (Feb 15)<br/>
-<em>Integration by Parts</em></h3>
+<em>Integration by Parts</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-1-integration-by-parts" role="button">Section 3.1</a></h3>
 <p>
 
 </p>
 <h3>Lecture 9 (Feb 20)<br/>
-<em>Trigonometric Integrals</em></h3>
+<em>Trigonometric Integrals</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-2-trigonometric-integrals" role="button">Section 3.2</a></h3>
 <p>
 
 </p>
 <h3>Lecture 10 (Feb 22)<br/>
-<em>Trigonometric Substitution</em></h3>
+<em>Trigonometric Substitution</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-3-trigonometric-substitution" role="button">Section 3.3</a></h3>
 <p>
 
 </p>
 <h3>Lecture 11 (Feb 27)<br/>
-<em>Partial Fractions</em></h3>
+<em>Partial Fractions</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-4-partial-fractions" role="button">Section 3.4</a></h3>
 <p>
 
 </p>
 <h3>Lecture 12 (Mar 1)<br/>
-<em>Improper Integrals</em></h3>
+<em>Improper Integrals</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-7-improper-integrals" role="button">Section 3.7</a></h3>
 <p>
 
 </p>
 <h3>Lecture 13 (Mar 6)<br/>
-<em>Separation of Variables</em></h3>
+<em>Separation of Variables</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/4-3-separable-equations" role="button">Section 4.3</a></h3>
 <p>
 
 </p>
 <h3>Lecture 14 (Mar 8)<br/>
-<em>First-Order Linear Differential Equations</em></h3>
+<em>First-Order Linear Differential Equations</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/4-5-first-order-linear-equations" role="button">Section 4.5</a></h3>
 <p>
 
 </p>
@@ -380,32 +380,32 @@
 
 </p>
 <h3>Lecture 16 (Mar 22)<br/>
-<em>Sequences</em></h3>
+<em>Sequences</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-1-sequences" role="button">Section 5.1</a></h3>
 <p>
 
 </p>
 <h3>Lecture 17 (Mar 27)<br/>
-<em>Infinite Series</em></h3>
+<em>Infinite Series</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-2-infinite-series" role="button">Section 5.2</a></h3>
 <p>
 
 </p>
 <h3>Lecture 18 (Mar 29)<br/>
-<em>The Divergence and Integral Tests</em></h3>
+<em>The Divergence and Integral Tests</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-3-the-divergence-and-integral-tests" role="button">Section 5.3</a></h3>
 <p>
 
 </p>
 <h3>Lecture 19 (Apr 3)<br/>
-<em>Comparison Test</em></h3>
+<em>Comparison Test</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-4-comparison-tests" role="button">Section 5.4</a></h3>
 <p>
 
 </p>
 <h3>Lecture 20 (Apr 5)<br/>
-<em>Alternating Sequences</em></h3>
+<em>Alternating Sequences</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-5-alternating-series" role="button">Section 5.5</a></h3>
 <p>
 
 </p>
 <h3>Lecture 21 (Apr 10)<br/>
-<em>Ratio and Root Tests</em></h3>
+<em>Ratio and Root Tests</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-6-ratio-and-root-tests" role="button">Section 5.6</a></h3>
 <p>
 
 </p>
@@ -415,17 +415,17 @@
 
 </p>
 <h3>Lecture 23 (Apr 17)<br/>
-<em>Power Series and Functions</em></h3>
+<em>Power Series and Functions</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/6-1-power-series-and-functions" role="button">Section 6.1</a></h3>
 <p>
 
 </p>
 <h3>Lecture 24 (Apr 19)<br/>
-<em>Properties of Power Series</em></h3>
+<em>Properties of Power Series</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/6-2-properties-of-power-series" role="button">Section 6.2</a></h3>
 <p>
 
 </p>
 <h3>Lecture 25 (Apr 24)<br/>
-<em>Taylor and Maclaurin Series</em></h3>
+<em>Taylor and Maclaurin Series</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/6-3-taylor-and-maclaurin-series" role="button">Section 6.3</a></h3>
 <p>
 
 </p>
@@ -439,10 +439,8 @@
 <p>
 
 </p>
+<hr>
 <h3 style="font-variant: small-caps;">Student Study Day (May 3)</h3>
-<p>
-
-</p>
 <hr>
 <h3 style="font-variant: small-caps;">Final Exam (May 10)</h3>
 <p>
@@ -479,20 +477,52 @@ The final exam will take place...
 	</li>
 </ol>
 </div>
-<hr>
-<div id="gradesexams">
-<h2 class="display-4">Grades and Exams</h2>
-<h3>Grading </h3>
+<hr/>
+<div id="grade">
+<h2 class="display-4">Grades</h2>
 <p>
+The grade in this course will depend on homework, three midterm exams and one (compulsory) final exam according to the following formula:
+</p>
+\[\frac{HW+ME_1+ME_2+ME_3+FE}{5}\]
+<p>
+where $HW\in [0,100]$ is the grade on the homework, $ME_1\in [0,100]$ is the grade on the 1st midterm exam, $ME_2\in [0,100]$ is the grade on the 2nd midterm exam, $ME_3\in [0,100]$ is the 3rd midterm exam and $FE\in [0,100]$ is the grade on the final exam. Note that each one of these grade is a numerical scale from $0$ to $100$.
+</p>
+<p>
+Once the numerical grade is computed, this will be converted to a letter grade as follows:
+</p>
 
+<p>However, there are a couple of extra rules that will be taken into account when computing the final grade: the back up grade policy, and the extra credit for practice problems.</p>
+<h3>Back Up Grade Policy</h3>
+<p>
+If the grade in the final exam is greater than the grade in any of the midterm exams, then the grade in the final exam will substitute the lowest grade in a midterm exam when computing the final grade. In other words, the actual formula to compute the final grade will be:
+</p>
+\[\max\left\{\frac{HW+ME_1+ME_2+ME_3+FE}{5},\frac{HW+ME_2+ME_3+2\,FE}{5},\frac{HW+ME_1+ME_3+2\,FE}{5},\frac{HW+ME_1+ME_2+2\,FE}{5}\right\}\in [0,100]\]
+<p>
+where $HW\in [0,100]$ is the grade on the homework, $ME_1\in [0,100]$ is the grade on the 1st midterm exam, $ME_2\in [0,100]$ is the grade on the 2nd midterm exam, $ME_3\in [0,100]$ is the 3rd midterm exam and $FE\in [0,100]$ is the grade on the final exam.
+</p>
+<p><em>Extreme example:</em> Imagine that you were unable to take one of the midterm exams, because you fell asleep. Because of this, you got zero points in that midterm exam. However, not everything would be lost. The back up grade policy guarantees that your grade in the final exam will substitute the zero grade in the midterm exam when computing the final grade. However, note that if you miss two final exams, then the grade in the final exam would only substitute <b>one</b> of the zero grades, not both of them.</p>
+<h3>Extra Credit for Practice Problems</h3>
+<p>
+Before each of the midterm exams and the final exam, a set of practice problems will be available through WeBWork. The 10% of the grade (from 0 to 100 points) obtained in these practice set will be added to the corresponding exam. Hence a student can take an exam with as many as 10 extra bouns point if E completes successfully the practice problems before the exam.
+</p>
+</div>
+<hr/>
+<div id="homework">
+<h2 class="display-4">Homework</h2>
+</div>
+<hr/>
+<div id="exams">
+<h2 class="display-4">Exams</h2>
+<p>
+There will be three midterm exams and one final exam.
 </p>
 <h3>Midterm Exams</h3>
 <p>
-
+There will be three midterm exams.
 </p>
-<h3>Final Exam</h3>
+<h3>Final Exam (May 10, 9:00 am-10:50 am)</h3>
 <p>
-
+In accordance with the <a href="https://asap.utsa.edu/terms.htm">2022 Spring Final Exam Schedule</a>, the final exam of this course will on Wednesday, May 10, from 9.00 am to 10:50 am. More details on the location will be given later.
 </p>
 </div>
 <hr>
