--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -491,7 +491,48 @@ where $HW\in [0,100]$ is the grade on the homework, $ME_1\in [0,100]$ is the gra
 <p>
 Once the numerical grade is computed, this will be converted to a letter grade as follows:
 </p>
-
+<table>
+    <tr style="background-color:#F15A22;color:white;text-align:center;">
+        <td style="font-weight: bold;">A+</td>
+        <td>97.5-100</td>
+        <td style="font-weight: bold;">A</td>
+        <td>90.0-97.4</td>
+        <td style="font-weight: bold;">A-</td>
+        <td>87.5-89.9</td>
+    </tr>
+    <tr style="background-color:#F15A22;color:white;text-align:center;">
+        <td style="font-weight: bold;">B+</td>
+        <td>85.0-87.4</td>
+        <td style="font-weight: bold;">B</td>
+        <td>80.0-84.9</td>
+        <td style="font-weight: bold;">B-</td>
+        <td>77.5-79.9</td>
+    </tr>
+    <tr style="background-color:#F15A22;color:white;text-align:center;">
+        <td style="font-weight: bold;">C+</td>
+        <td>75.0-77.4</td>
+        <td style="font-weight: bold;">C</td>
+        <td>70.0-74.9</td>
+        <td style="font-weight: bold;">C-</td>
+        <td>67.5-69.9</td>
+    </tr>
+    <tr style="background-color:#F15A22;color:white;text-align:center;">
+        <td style="font-weight: bold;">D+</td>
+        <td>65.0-67.4</td>
+        <td style="font-weight: bold;">D</td>
+        <td>60-64.9</td>
+        <td style="font-weight: bold;">D-</td>
+        <td>57.5-59.9</td>
+    </tr>
+    <tr style="background-color:black;color:white;text-align:center;">
+        <td></td>
+        <td></td>
+        <td style="font-weight: bold;">F</td>
+        <td>0-57.4</td>
+        <td></td>
+        <td></td>
+    </tr>
+</table>
 <p>However, there are a couple of extra rules that will be taken into account when computing the final grade: the back up grade policy, and the extra credit for practice problems.</p>
 <h3>Back Up Grade Policy</h3>
 <p>
