--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -500,7 +500,7 @@ Once the numerical grade is computed, this will be converted to a letter grade a
         <td style="font-weight: bold;">A-</td>
         <td>87.5-89.9</td>
     </tr>
-    <tr style="background-color:#F15A22;color:white;text-align:center;">
+    <tr style="background-color:rgb(180,67,25);color:white;text-align:center;">
         <td style="font-weight: bold;">B+</td>
         <td>85.0-87.4</td>
         <td style="font-weight: bold;">B</td>
@@ -508,7 +508,7 @@ Once the numerical grade is computed, this will be converted to a letter grade a
         <td style="font-weight: bold;">B-</td>
         <td>77.5-79.9</td>
     </tr>
-    <tr style="background-color:#F15A22;color:white;text-align:center;">
+    <tr style="background-color:rgb(120,45,17);color:white;text-align:center;">
         <td style="font-weight: bold;">C+</td>
         <td>75.0-77.4</td>
         <td style="font-weight: bold;">C</td>
@@ -516,7 +516,7 @@ Once the numerical grade is computed, this will be converted to a letter grade a
         <td style="font-weight: bold;">C-</td>
         <td>67.5-69.9</td>
     </tr>
-    <tr style="background-color:#F15A22;color:white;text-align:center;">
+    <tr style="background-color:rgb(60,22,8);color:white;text-align:center;">
         <td style="font-weight: bold;">D+</td>
         <td>65.0-67.4</td>
         <td style="font-weight: bold;">D</td>
