--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -538,7 +538,7 @@ Once the numerical grade is computed, this will be converted to a letter grade a
 <p>
 If the grade in the final exam is greater than the grade in any of the midterm exams, then the grade in the final exam will substitute the lowest grade in a midterm exam when computing the final grade. In other words, the actual formula to compute the final grade will be:
 </p>
-\[\frac{HW+\max\left\{ME_1+ME_2+ME_3+FE,ME_2+ME_3+2\,FE,ME_1+ME_3+2\,FE,ME_1+ME_2+2\,FE\right\}}{5}\right\}\in [0,100]\]
+\[\frac{HW+\max\left\{ME_1+ME_2+ME_3+FE,ME_2+ME_3+2\,FE,ME_1+ME_3+2\,FE,ME_1+ME_2+2\,FE\right\}}{5}\in [0,100]\]
 <p>
 where $HW\in [0,100]$ is the grade on the homework, $ME_1\in [0,100]$ is the grade on the 1st midterm exam, $ME_2\in [0,100]$ is the grade on the 2nd midterm exam, $ME_3\in [0,100]$ is the 3rd midterm exam and $FE\in [0,100]$ is the grade on the final exam.
 </p>
