--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -491,44 +491,44 @@ where $HW\in [0,100]$ is the grade on the homework, $ME_1\in [0,100]$ is the gra
 <p>
 Once the numerical grade is computed, this will be converted to a letter grade as follows:
 </p>
-<table>
+<table style="width:80%;margin-left: auto;margin-right: auto;">
     <tr style="background-color:#F15A22;color:white;text-align:center;">
-        <td style="font-weight: bold;">A+</td>
-        <td>97.5-100</td>
-        <td style="font-weight: bold;">A</td>
-        <td>90.0-97.4</td>
-        <td style="font-weight: bold;">A-</td>
-        <td>87.5-89.9</td>
+        <td style="font-weight: bold;text-align:right;">A+</td>
+        <td style="text-align:left;">97.5-100</td>
+        <td style="font-weight: bold;text-align:right;">A</td>
+        <td style="text-align:left;">90.0-97.4</td>
+        <td style="font-weight: bold;text-align:right;">A-</td>
+        <td style="text-align:left;">87.5-89.9</td>
     </tr>
     <tr style="background-color:rgb(180,67,25);color:white;text-align:center;">
-        <td style="font-weight: bold;">B+</td>
-        <td>85.0-87.4</td>
-        <td style="font-weight: bold;">B</td>
-        <td>80.0-84.9</td>
-        <td style="font-weight: bold;">B-</td>
-        <td>77.5-79.9</td>
+        <td style="font-weight: bold;text-align:right;">B+</td>
+        <td style="text-align:left;">85.0-87.4</td>
+        <td style="font-weight: bold;text-align:right;">B</td>
+        <td style="text-align:left;">80.0-84.9</td>
+        <td style="font-weight: bold;text-align:right;">B-</td>
+        <td style="text-align:left;">77.5-79.9</td>
     </tr>
     <tr style="background-color:rgb(120,45,17);color:white;text-align:center;">
-        <td style="font-weight: bold;">C+</td>
-        <td>75.0-77.4</td>
-        <td style="font-weight: bold;">C</td>
-        <td>70.0-74.9</td>
-        <td style="font-weight: bold;">C-</td>
-        <td>67.5-69.9</td>
+        <td style="font-weight: bold;text-align:right;">C+</td>
+        <td style="text-align:left;">75.0-77.4</td>
+        <td style="font-weight: bold;text-align:right;">C</td>
+        <td style="text-align:left;">70.0-74.9</td>
+        <td style="font-weight: bold;text-align:right;">C-</td>
+        <td style="text-align:left;">67.5-69.9</td>
     </tr>
-    <tr style="background-color:rgb(60,22,8);color:white;text-align:center;">
-        <td style="font-weight: bold;">D+</td>
-        <td>65.0-67.4</td>
-        <td style="font-weight: bold;">D</td>
-        <td>60-64.9</td>
-        <td style="font-weight: bold;">D-</td>
-        <td>57.5-59.9</td>
+    <tr style="background-color:rgb(60,22,8);color:white;">
+        <td style="font-weight: bold;text-align:right;">D+</td>
+        <td style="text-align:left;">65.0-67.4</td>
+        <td style="font-weight: bold;text-align:right;">D</td>
+        <td style="text-align:left;">60-64.9</td>
+        <td style="font-weight: bold;text-align:right;">D-</td>
+        <td style="text-align:left;">57.5-59.9</td>
     </tr>
     <tr style="background-color:black;color:white;text-align:center;">
         <td></td>
         <td></td>
-        <td style="font-weight: bold;">F</td>
-        <td>0-57.4</td>
+        <td style="font-weight: bold;text-align:right;">F</td>
+        <td style="text-align:left;">0-57.4</td>
         <td></td>
         <td></td>
     </tr>
