--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -172,7 +172,7 @@
 	    </tr>
 	    <tr>
 	        <td>Office Hours:</td>
-	        <td>TBA</td>
+	        <td>Monday, 10.00 am - 12.05 pm</td>
 	        <td></td>
 	        <td>April 17 & 19, 2023</td>
 	    </tr>
@@ -491,44 +491,44 @@ where $HW\in [0,100]$ is the grade on the homework, $ME_1\in [0,100]$ is the gra
 <p>
 Once the numerical grade is computed, this will be converted to a letter grade as follows:
 </p>
-<table style="width:80%;margin-left: auto;margin-right: auto;">
+<table style="margin-left: auto;margin-right: auto;">
     <tr style="background-color:#F15A22;color:white;text-align:center;">
-        <td style="font-weight: bold;text-align:right;">A+</td>
-        <td style="text-align:left;">97.5-100</td>
-        <td style="font-weight: bold;text-align:right;">A</td>
-        <td style="text-align:left;">90.0-97.4</td>
-        <td style="font-weight: bold;text-align:right;">A-</td>
-        <td style="text-align:left;">87.5-89.9</td>
+        <td style="font-weight: bold;text-align:center;width:3em;">A+</td>
+        <td style="text-align:center;width:5em;">97.5-100</td>
+        <td style="font-weight: bold;text-align:center;width:3em;">A</td>
+        <td style="text-align:center;width:5em;">90.0-97.4</td>
+        <td style="font-weight: bold;text-align:center;width:3em;">A-</td>
+        <td style="text-align:center;width:5em;">87.5-89.9</td>
     </tr>
     <tr style="background-color:rgb(180,67,25);color:white;text-align:center;">
-        <td style="font-weight: bold;text-align:right;">B+</td>
-        <td style="text-align:left;">85.0-87.4</td>
-        <td style="font-weight: bold;text-align:right;">B</td>
-        <td style="text-align:left;">80.0-84.9</td>
-        <td style="font-weight: bold;text-align:right;">B-</td>
-        <td style="text-align:left;">77.5-79.9</td>
+        <td style="font-weight: bold;text-align:center;width:3em;">B+</td>
+        <td style="text-align:center;width:5em;">85.0-87.4</td>
+        <td style="font-weight: bold;text-align:center;width:3em;">B</td>
+        <td style="text-align:center;width:5em;">80.0-84.9</td>
+        <td style="font-weight: bold;text-align:center;width:3em;">B-</td>
+        <td style="text-align:center;width:5em;">77.5-79.9</td>
     </tr>
     <tr style="background-color:rgb(120,45,17);color:white;text-align:center;">
-        <td style="font-weight: bold;text-align:right;">C+</td>
-        <td style="text-align:left;">75.0-77.4</td>
-        <td style="font-weight: bold;text-align:right;">C</td>
-        <td style="text-align:left;">70.0-74.9</td>
-        <td style="font-weight: bold;text-align:right;">C-</td>
-        <td style="text-align:left;">67.5-69.9</td>
+        <td style="font-weight: bold;text-align:center;width:3em;">C+</td>
+        <td style="text-align:center;width:5em;">75.0-77.4</td>
+        <td style="font-weight: bold;text-align:center;width:3em;">C</td>
+        <td style="text-align:center;width:5em;">70.0-74.9</td>
+        <td style="font-weight: bold;text-align:center;width:3em;">C-</td>
+        <td style="text-align:center;width:5em;">67.5-69.9</td>
     </tr>
     <tr style="background-color:rgb(60,22,8);color:white;">
-        <td style="font-weight: bold;text-align:right;">D+</td>
-        <td style="text-align:left;">65.0-67.4</td>
-        <td style="font-weight: bold;text-align:right;">D</td>
-        <td style="text-align:left;">60-64.9</td>
-        <td style="font-weight: bold;text-align:right;">D-</td>
-        <td style="text-align:left;">57.5-59.9</td>
+        <td style="font-weight: bold;text-align:center;width:3em;">D+</td>
+        <td style="text-align:center;width:5em;">65.0-67.4</td>
+        <td style="font-weight: bold;text-align:center;width:3em;">D</td>
+        <td style="text-align:center;width:5em;">60.0-64.9</td>
+        <td style="font-weight: bold;text-align:center;width:3em;">D-</td>
+        <td style="text-align:center;width:5em;">57.5-59.9</td>
     </tr>
     <tr style="background-color:black;color:white;text-align:center;">
         <td></td>
         <td></td>
-        <td style="font-weight: bold;text-align:right;">F</td>
-        <td style="text-align:left;">0-57.4</td>
+        <td style="font-weight: bold;text-align:center;width:3em;">F</td>
+        <td style="text-align:center;width:5em;">0-57.4</td>
         <td></td>
         <td></td>
     </tr>
